--- a/main.css
+++ b/main.css
@@ -21,8 +21,8 @@ body {
 
   text-align: center;
   /* background-image: url('cool-geometric-triangular-figure-neon-laser-light-great-backgrounds.jpg'); */
-  background-image: url('images/cool-geometric-triangular-figure-neon-laser-light-great-backgrounds.jpg');
-  background-repeat: no-repeat;
+  background: linear-gradient(to bottom, #f0f8ff, #2c3e50); 
+  
   background-size: 100% 120%;
 
 }
